2011-10-03 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/central_proxy.pl: Added proxy to request_log function
	* central_proxy/RequestLog.pm: Changed request log format

2011-10-03 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/central_proxy.pl: Changed monitoring function to support 
	customized prefix names and groups.
	* central_proxy/central_proxy.cfg: Added new parameters MONITORING_PREFIX, 
	MONITORING_GROUP and MONITORING_GLOBAL_NAME.

2011-09-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* satellite_proxy/cfg.php: Added parameter for request log path. 
	* satellite_proxy/requestlog_lib.php: First version of file.
	* satellite_proxy/satellite_proxy.php: Added support to log requests
	* central_proxy/central_proxy.pl: Added support to send info about 
	connect type to php proxy (only used for logs).

2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/pandora_data: Added pandora_data folder.

2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/central_proxy.pl: Added refresh_selector functions.
	* central_proxy/central_proxy.cfg: Added SELECTOR_INTERVAL.
	* central_proxy/ProxySelector.pm: Added refresh_selector and deneid_message
	functions.

2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* ProxyFilter.pm: Delete file.
	* central_proxy.pl: Adapted to use new ProxySelector library.
	* ProxySelector.pm: Now you can develop selections and filters with one
	lib.

2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy.pl: Delete a varaible which is not used.

2011-09-05 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy.pl: Added monitoring feature for Pandora FMS.
	* central_proxy.cfg: Added monitoring variables to config file.
	* ProxySelector.pm: Changed configuration file path from config file to
	ProxySelector lib.

2011-09-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/ProxyLib.pm: Fixed an error in thread_exit function
